--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container w-50 mt-3">
+    <div class="container w-auto mt-3">
         <form>
             Parola:
             <input type="text" name="parola" id="parola" class="form-control" required><br>
