--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </div>
             <div class="btn btn-success btn-lg rounded-circle float-end" id="aggiungi">+</div>
             <button class="btn btn-primary btn-lg" id="cripta">Cripta</button><br>
-        </form>
-        <h1 id="parola-criptata"></h1>
+        </form><br>
+        <h1 id="parola-criptata" class="text-center"></h1>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
