--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 <input type="number" name="k1" id="k1" class="form-control" min="1" max="25" required><br>
             </div>
             <div class="btn btn-success btn-lg rounded-circle float-end" id="aggiungi">+</div>
-            <button class="btn btn-primary btn-lg" id="cripta">Cripta</button><br>
+            <button class="btn btn-primary btn-lg" id="cripta">Cripta</button>
+            <button class="btn btn-danger btn-lg ms-5" id="decripta">Decripta</button><br>
         </form><br>
         <h1 id="parola-criptata" class="text-center"></h1>
     </div>
