--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
                 Chiave:
                 <input type="number" name="k1" id="k1" class="form-control" min="1" max="25" required><br>
             </div>
+            <div id="seq" class="d-none">
+                Sequenza:
+                <input type="text" name="sequenza" id="sequenza" class="form-control"><br>
+            </div>
             <div class="btn btn-success btn-lg rounded-circle float-end" id="aggiungi">+</div>
             <button class="btn btn-primary btn-lg" id="cripta">Cripta</button>
-            <button class="btn btn-danger btn-lg ms-5" id="decripta">Decripta</button><br>
+            <button class="btn btn-danger btn-lg ms-3" id="decripta">Decripta</button><br>
         </form><br>
         <h1 id="parola-criptata" class="text-center"></h1>
     </div>
