--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
     <div class="container w-auto mt-3">
         <form>
-            Parola:
+            Frase
             <input type="text" name="parola" id="parola" class="form-control" required><br>
             <div id="chiavi">
-                Chiave:
+                Chiave #1
                 <input type="number" name="k1" id="k1" class="form-control" min="1" max="25" required><br>
             </div>
             <div id="seq" class="d-none">
-                Sequenza:
-                <input type="text" name="sequenza" id="sequenza" class="form-control"><br>
+                Sequenza
+                <input type="text" name="sequenza" id="sequenza" class="form-control" placeholder="es. 123"><br>
             </div>
             <div class="btn btn-success btn-lg rounded-circle float-end" id="aggiungi">+</div>
             <button class="btn btn-primary btn-lg" id="cripta">Cripta</button>
