--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="btn btn-primary btn-lg" id="cripta">Cripta</button>
             <button class="btn btn-danger btn-lg ms-3" id="decripta">Decripta</button><br>
         </form><br>
-        <h1 id="parola-criptata" class="text-center"></h1>
+        <h1 id="parola-criptata" class="text-center" style="display: none;"></h1>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
