--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div id="seq" style="display: none;">
                 <h5>Sequenza</h5>
-                <input type="text" name="sequenza" id="sequenza" class="form-control" placeholder="es. 123"><br>
+                <input type="number" name="sequenza" id="sequenza" class="form-control" placeholder="es. 123" min="1"><br>
             </div>
             <img src="https://img.icons8.com/fluency/48/000000/add-key.png" class="float-end" style="cursor: pointer;"
                 id="aggiungi" />
